# ohm_rrl_perception

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.devcontainer/: Dockerfile  devcontainer.json
cfg/: MotionDetection.cfg
config/hazmats/: .~lock.labels.txt.ods#
debian/: changelog  control  gbp.conf  rules
launch/: c_detection_thermal.launch  motiondetection_with_camera.launch
ohm_rrl_cdetection/: CMakeLists.txt  package.xml
ohm_rrl_cdetection/launch/: c_detection_RGB.launch  c_detection_thermal.launch
ohm_rrl_cdetection/src/: auto_c_detect_node.cpp  auto_thermal_c_detect_node.cpp
ohm_rrl_motiondetection/: CMakeLists.txt  package.xml
ohm_rrl_motiondetection/cfg/: MotionDetection.cfg
ohm_rrl_motiondetection/launch/: motiondetection.launch  motiondetection_with_camera.launch
ohm_rrl_motiondetection/src/: MotionDetectionNode.cpp  MotionDetectionNode.h  SmoothRect.h
ohm_rrl_motiondetection2/: CMakeLists.txt  package.xml
ohm_rrl_motiondetection2/cfg/: MotionDetection.cfg
ohm_rrl_motiondetection2/launch/: motiondetection.launch  motiondetection_with_camera.launch
ohm_rrl_motiondetection2/src/: MotionDetectionNode.cpp  MotionDetectionNode.h
ohm_rrl_perception/: package.xml
ohm_rrl_perception/auto_c_detect/: CMakeLists.txt  package.xml
ohm_rrl_perception/auto_c_detect/src/: auto_c_detect_node.cpp  auto_c_detect_node.txt  auto_thermal_c_detect_node.txt
ohm_rrl_perception/ohm_rrl_cdetection/: package.xml
ohm_rrl_perception_launch/: CMakeLists.txt  package.xml
ohm_rrl_perception_launch/launch/: perception.launch  sensor_test.launch
ohm_rrl_perception_msgs/: CMakeLists.txt  package.xml
ohm_rrl_perception_msgs/msg/: Haz.msg  HazArray.msg  Marker.msg  Qr.msg  QrArray.msg  Rect.msg  Victim.msg  VictimArray.msg  signarray.msg  signmsg.msg
ohm_rrl_perception_msgs/srv/: AddVictim.srv  GetAllVictims.srv  GetVictim.srv
ohm_rrl_perception_rqt/: CMakeLists.txt  package.xml  plugin_sensor_test.xml
ohm_rrl_perception_rqt/src/: PluginSensorTest.cpp  PluginSensorTest.h  sensor_test.ui
ohm_rrl_perception_utility/: CMakeLists.txt  package.xml
ohm_rrl_perception_utility/config/hazmats/: haz_objects.yaml  haz_settings.ini  labels.txt.ods  settings.ini
ohm_rrl_perception_utility/launch/: hazmatdetection.launch  hazmatdetection.launch.py
ohm_rrl_perception_utility/src/: ohm_convert_findObject2D_toRect.cpp
ohm_rrl_qrdetection/: CMakeLists.txt  package.xml
ohm_rrl_qrdetection/launch/: qrdetection.launch
ohm_rrl_qrdetection/src/: QrCodeDetection.cpp  QrCodeDetection.h  QrCodeToWorld.cpp  QrCodeToWorld.h  QrCodeToWorldRealSense.cpp  QrCodeToWorldRealSense.h  ohm_qr_detection_node.cpp  ohm_qr_to_world_node.cpp  qr_realsense_stack_node.cpp  qr_stack_node.cpp
ohm_rrl_qtdetection/: CMakeLists.txt  QrCodesLocalization.txt  package.xml
ohm_rrl_qtdetection/launch/: qrdetection.launch
ohm_rrl_qtdetection/src/: QrCodeDetection.cpp  QrCodeDetection.h  QrCodeToWorld.cpp  ohm_qr_detection_node.cpp  ohm_qr_to_world_node.cpp
ohm_rrl_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ohm_rrl_rqt/include/ohm_rrl_rqt/: ImageUi.h
ohm_rrl_rqt/src/: ImageUi.cpp  ImageUi.ui
ohm_rrl_start_stop/: CMakeLists.txt  package.xml
ohm_rrl_start_stop/launch/: startstop.launch
ohm_rrl_start_stop/src/: ohm_rrl_start_stop_node.cpp
rpm/: ros-indigo-ohm-rrl-cdetection.spec  ros-indigo-ohm-rrl-motiondetection.spec  ros-indigo-ohm-rrl-perception-launch.spec  ros-indigo-ohm-rrl-perception-utility.spec  ros-indigo-ohm-rrl-perception.spec  ros-indigo-ohm-rrl-qrdetection.spec  template.spec
src/: MotionDetectionNode.h  QrCodeToWorld.h  SmoothRect.cpp  auto_c_detect_node.cpp  auto_thermal_c_detect_node.cpp  ohm_qr_detection_node.cpp
