<package>
  <name>ohm_rrl_perception</name>
  <version>0.0.0</version>
  <description>Meta package for the perception in the robocup rescue league</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="christian.pfitzner@th-nuernberg.de">Christian Pfitzner</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ohm_rrl_motiondetection</run_depend>
  <run_depend>ohm_rrl_perception_launch</run_depend>
  <export>
    <metapackage/>
  </export>
</package>

